{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 14,
  "lineage": "44633f44-830d-55e2-9f7b-67a99a2d9172",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0470e33cd681b2476",
            "arn": "arn:aws:ec2:ap-south-1:031660489033:instance/i-0ce8a0b892970c13a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce8a0b892970c13a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089c13103c776c955",
            "private_dns": "ip-10-0-1-203.ap-south-1.compute.internal",
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-13-233-110-236.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.110.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-006d95944f24ce830",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00c3228b88d666ccb",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c5040e72c091d9f1"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c1b26e02d2da9168",
            "owner_id": "031660489033",
            "tags": {
              "Name": "VPC_IGW"
            },
            "vpc_id": "vpc-02d2aa2fb7166569d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0df8fb55c70a0c533",
            "owner_id": "031660489033",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1b26e02d2da9168",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "vpc_id": "vpc-02d2aa2fb7166569d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce7c719686d7ab5e",
            "route_table_id": "rtb-0df8fb55c70a0c533",
            "subnet_id": "subnet-00c3228b88d666ccb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031660489033:security-group/sg-0c5040e72c091d9f1",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5040e72c091d9f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_test_web",
            "name_prefix": null,
            "owner_id": "031660489033",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d2aa2fb7166569d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031660489033:subnet/subnet-092878a1efb076642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-092878a1efb076642",
            "map_public_ip_on_launch": false,
            "owner_id": "031660489033",
            "tags": {
              "Name": "Private_subnet1"
            },
            "vpc_id": "vpc-02d2aa2fb7166569d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031660489033:subnet/subnet-05685c0ca3440600b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.200.0/24",
            "id": "subnet-05685c0ca3440600b",
            "map_public_ip_on_launch": false,
            "owner_id": "031660489033",
            "tags": {
              "Name": "Private_subnet2"
            },
            "vpc_id": "vpc-02d2aa2fb7166569d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031660489033:subnet/subnet-00c3228b88d666ccb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00c3228b88d666ccb",
            "map_public_ip_on_launch": true,
            "owner_id": "031660489033",
            "tags": {
              "Name": "Public_subnet1"
            },
            "vpc_id": "vpc-02d2aa2fb7166569d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031660489033:subnet/subnet-00638396a35f82ec8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00638396a35f82ec8",
            "map_public_ip_on_launch": true,
            "owner_id": "031660489033",
            "tags": {
              "Name": "Public_subnet2"
            },
            "vpc_id": "vpc-02d2aa2fb7166569d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:031660489033:vpc/vpc-02d2aa2fb7166569d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0512f514337aae51b",
            "default_route_table_id": "rtb-0a689a4b83f6d2f7f",
            "default_security_group_id": "sg-09ca3c331483cf779",
            "dhcp_options_id": "dopt-55619c3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02d2aa2fb7166569d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a689a4b83f6d2f7f",
            "owner_id": "031660489033",
            "tags": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}